# v2

./: .gitignore  AGENTS.md  AGENT_INSTRUCTIONS.md  CLAUDE.md  Cargo.toml  DESIGN.md  Makefile  README.md  accepted-models.example  install.sh
.githooks/: pre-push
.github/workflows/: ci.yml  desktop-build.yml  release.yml
.v2/: key
demo/: two-node.sh
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/src-tauri/src/commands/: mesh.rs  mod.rs  models.rs  scan.rs  serve.rs
docs/: CONFIG.md  DESKTOP_APP.md  GUIDE.md  MESH.md
src/: accepted.rs  activity.rs  bandwidth.rs  console.rs  display.rs  doctor.rs  endpoints.rs  engine.rs  hardware.rs  lib.rs  main.rs  manage.rs  models.rs  ollama.rs  ollama_api.rs  paths.rs  policy.rs  proxy.rs  sources.rs  test_support.rs  ui.rs  usage.rs
src/mesh/: abuse.rs  client.rs  gossip.rs  identity.rs  itest.rs  mod.rs  proto.rs  relay.rs  serve.rs  transport.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: main.ts  platform.ts  style.css  types.ts  util.ts
web/src/views/: mesh.ts  models.ts  scan.ts  serve.ts
