[package]
name = "v2"
version = "0.1.1"
edition = "2021"
description = "Which LLMs can you run? v2 tells you."

[lib]
name = "v2"
path = "src/lib.rs"

[[bin]]
name = "v2"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Base build is TLS-free: the scan + local Ollama only need localhost HTTP, and
# the mesh is raw-TCP+Noise. The `remote` feature (on in the daemon build) adds
# ureq's rustls so hosted endpoints (Modal, vLLM, …) reachable over HTTPS work.
ureq = { version = "2", features = ["json"], default-features = false }

# Daemon + mesh (feature "daemon", on by default). The plain `v2` scan builds
# with --no-default-features and pulls none of these — see H6 in DESIGN.md.
tiny_http = { version = "0.12", optional = true }
snow = { version = "0.9", optional = true }
ed25519-dalek = { version = "2", optional = true }
getrandom = { version = "0.2", optional = true }
toml = { version = "0.8", optional = true }
base64 = { version = "0.22", optional = true }

[features]
default = ["daemon"]
daemon = ["dep:tiny_http", "dep:snow", "dep:ed25519-dalek", "dep:getrandom", "dep:toml", "dep:base64", "remote"]
# Remote hosted endpoints (e.g. a model on Modal) speak HTTPS, so this feature
# re-enables ureq's rustls TLS. Kept separate so the plain scan binary
# (--no-default-features) stays TLS-free and tiny (H6).
remote = ["ureq/tls"]

[profile.release]
opt-level = 3
strip = true
lto = true
