[package]
name = "v2-desktop"
version = "0.1.0"
edition = "2021"
description = "v2 — which LLMs can you run? (desktop)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
v2 = { path = "../.." }
